--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -28,7 +28,8 @@
     "partials/header",
     "partials/footer",
     // states
-    "partials/state";
+    "partials/state",
+    "partials/keyframes";
 
 // pages
 @import
