--- a/src/scss/pages/_index.scss
+++ b/src/scss/pages/_index.scss
@@ -34,7 +34,7 @@ $margin_bottom: 135px;
 
 .visited__inner{
     background-position: center center;
-    background-size: cover;
+    background-size: 100% 100%;
 }
 
 .modal{
